# hyvolex_paradigm

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.rustRules/: .cursorrules  DEBUGGING.md  rust_eze.json
Docs/: Bevy_Complete_Documentation.md  Docs2.txt  HanabiDocs.txt
assets/shaders/: cel.wgsl
assets/textures/: generate_textures.py
src/: ERROR_HANDLING.txt  err.rs  lib.rs  main.rs
src/components/: connection.rs  generated_mesh.rs  magnetic_field.rs  mod.rs  node.rs  particle_emitter.rs  shapes.rs  window_border.rs
src/resources/: config.rs  effects.rs  helix_config.rs  materials.rs  mod.rs  uni_color.rs
src/systems/: camera.rs  generation.rs  intersections.rs  magnetic.rs  mesh_generator.rs  mod.rs  node_visuals.rs  particles.rs  rendering.rs  setup.rs
